--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,4 +29,5 @@ jobs:
           cli: 1.10.1.693 # Clojure CLI based on tools.deps
 
       - name: Run CI tests
-        run: clojure -M:test
+        # run: clojure -M:test
+        run: cljojure -T:build ci
