--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,19 +14,19 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3.0.2
 
       - name: Prepare java
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3.2.0
         with:
           distribution: 'zulu'
           java-version: '17'
           cache: 'maven'
 
       - name: Install clojure tools
-        uses: DeLaGuardo/setup-clojure@3.5
+        uses: DeLaGuardo/setup-clojure@5.1
         with:
-          cli: 1.10.3.1040 # Clojure CLI based on tools.deps
+          cli: 1.11.1.1113
 
       - name: Run CI tests
         # run: clojure -M:test
