--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,20 +11,21 @@ jobs:
         os: [ubuntu-latest, macOS-latest]
 
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 5
 
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
 
       - name: Prepare java
-        uses: actions/setup-java@v3.2.0
+        uses: actions/setup-java@v3.3.0
         with:
           distribution: 'zulu'
           java-version: '17'
           cache: 'maven'
 
       - name: Install clojure tools
-        uses: DeLaGuardo/setup-clojure@5.1
+        uses: DeLaGuardo/setup-clojure@7.0
         with:
           cli: 1.11.1.1113
 
